# pirate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: main.rs
pirate-macro-lib/: Cargo.toml
pirate-macro-lib/src/: lib.rs
pirates-macro-lib/: Cargo.toml  README.md
pirates-macro-lib/src/: lib.rs
resources/: pirate.ase
src/: client.rs  core.rs  error.rs  lib.rs  rpc_types.rs  server.rs  transport.rs
