[package]
name = "pirates"
version = "0.1.0"
edition = "2021"

[features]

macros = []


[dependencies]
serde = {version="1.0.144", features = ["derive"]}
serde-pickle = "1.1.1"
tokio = {version = "1.21.1", features = ["net", "io-util", "rt", "macros"]}
async-trait = "0.1.57"
pirates_macro_lib = { path = "pirates-macro-lib"}