[package]
name = "pirates"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple async RPC lib"
homepage = "https://github.com/tehsmeely/pirates"
repository = "https://github.com/tehsmeely/pirates"
readme = "README.md"
keywords = ["rpc", "async"]
categories = ["asynchronous", "network-programming"]

[features]

macros = []


[dependencies]
serde = {version="1.0.144", features = ["derive"]}
serde-pickle = "1.1.1"
tokio = {version = "1.21.1", features = ["net", "io-util", "rt", "macros"]}
async-trait = "0.1.57"
pirates_macro_lib = { path = "pirates-macro-lib"}