[package]
name = "pirates"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple async RPC lib"
homepage = "https://github.com/tehsmeely/pirates"
repository = "https://github.com/tehsmeely/pirates"
readme = "README.md"
keywords = ["rpc", "async"]
categories = ["asynchronous", "network-programming"]

[features]

macros = []

transport_postcard = ["postcard"]

[dependencies]
log = "0.4.17"
serde = {version="1.0.144", features = ["derive"]}
serde-pickle = "1.1.1"
tokio = {version = "1.21.1", features = ["net", "io-util", "rt", "macros"]}
async-trait = "0.1.57"
pirates_macro_lib = { version = "0.1.0", path = "pirates-macro-lib"}

## Optional deps for transports:
postcard = {version = "1.0.2", optional = true}