[package]
name = "pirate_macro_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "pirate_macro_lib"
path = "src/lib.rs"
proc-macro = true

[dependencies]
# https://github.com/dtolnay/proc-macro-workshop#debugging-tips
syn = { version = "1.0.101", features = ["extra-traits", "full"] }
quote = "*"
proc-macro2 = "*"
