[package]
name = "pirates_macro_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc macros for pirates lib"
homepage = "https://github.com/tehsmeely/pirates"
repository = "https://github.com/tehsmeely/pirates"
readme = "README.md"

[lib]
name = "pirates_macro_lib"
path = "src/lib.rs"
proc-macro = true

[dependencies]
# https://github.com/dtolnay/proc-macro-workshop#debugging-tips
syn = { version = "1.0.102", features = ["extra-traits", "full"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"
